--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,10 @@
   src: url("../fonts/play-v19-latin-700.woff2") format("woff2");
 }
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --color-primary-light: #fff;
   --color-primary-blue: #2b7fff;
@@ -54,10 +58,28 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
 }
 
 ul {
   list-style-type: none;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1464px;
+  max-width: 100%;
+  padding: 24px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 /* Section Titles */
@@ -66,7 +88,6 @@ ul {
   font-family: "Play", sans-serif;
   font-size: 64px;
   font-weight: 700;
-  text-align: center;
 }
 
 .headings {
@@ -92,21 +113,29 @@ ul {
 
 /* Main Section */
 
+.main-section {
+  padding-top: 0;
+  padding-bottom: 83.24px;
+}
+
 .main-subtitle {
+  padding: 16.52px 0 16px;
   font-size: 18px;
 }
 
 .main-title {
+  padding-bottom: 40px;
   color: var(--color-primary-blue);
   font-family: Play, sans-serif;
   font-size: 140px;
   font-weight: 700;
   line-height: 0.8;
   text-transform: capitalize;
-  text-align: left;
 }
 
 .main-button {
+  padding: 16px 32px;
+  margin: 0 0 14px;
   color: var(--color-primary-light);
   font-family: "Roboto", sans-serif;
   font-size: 18px;
@@ -115,7 +144,6 @@ ul {
   border-radius: 32px;
   border-color: var(--color-primary-blue);
   border-style: dashed;
-  padding: 16px 32px;
   cursor: pointer;
 }
 
@@ -135,8 +163,12 @@ ul {
 
 /* About us section */
 
+.about-us-section {
+  padding-top: 59.24px;
+}
+
 .about-us {
-  text-align: left;
+  padding: 0 0 40px;
 }
 
 .about-us .headings {
@@ -144,9 +176,9 @@ ul {
 }
 
 .about-us-text {
+  padding: 0 0 40px;
   font-size: 22px;
   line-height: 1.7;
-  text-align: left;
 }
 
 .about-us-text .about-us-bold {
@@ -161,7 +193,6 @@ ul {
 .why-choose-us-advantages {
   font-size: 18px;
   line-height: 1.3;
-  text-align: center;
 }
 
 /* Our procedures section */
@@ -170,6 +201,12 @@ ul {
   color: var(--color-primary-light);
   font-size: 22px;
   line-height: 1.1;
+}
+
+/* Contact section */
+
+.contact-text-subtitle-color {
+  color: var(--color-primary-blue);
 }
 
 /* Footer */
